--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "microservice-movies",
   "dependencies": {
     "aws-sdk": "2.114.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "react-validate-form": "^1.0.6"
   }
 }
